--- a/next-toolkit/pages/style.css
+++ b/next-toolkit/pages/style.css
@@ -24,3 +24,18 @@
 .product-card:hover .product-card-actions {
   opacity: 100;
 }
+.cart-grid div {
+  position: relative;
+  z-index: 10;
+}
+.cart-grid h2::before {
+  position: absolute;
+  z-index: 1;
+  top: 30px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  content: "";
+  transition: all 0.4s ease 0s;
+  background-color: #e3e1e1;
+}
