--- a/next-toolkit/pages/style.css
+++ b/next-toolkit/pages/style.css
@@ -45,3 +45,65 @@
 .cart-popover::before {
   border-color: none;
 }
+
+.pagination {
+  /* box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05); */
+  display: flex;
+  margin: 10px auto;
+  padding: 0.5rem 2rem;
+  width: fit-content;
+  align-items: center;
+  border-radius: 20px;
+  padding: 8px 0 16px 0;
+}
+
+.pagination .active {
+  background-color: rgb(157, 173, 127);
+  padding: 0.5rem;
+  color: white;
+  margin: 0 0.2rem;
+}
+
+.pagination > li {
+  border: 1px solid rgb(157, 173, 127);
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  transition: all 0.3s linear;
+  margin: 0 0.2rem;
+}
+a {
+  outline: none;
+}
+.pagination > li:hover,
+.previous:hover,
+.next:hover {
+  background-color: rgb(157, 173, 127);
+  color: white;
+}
+
+.previous,
+.next {
+  background-color: rgb(157, 173, 127);
+  border-radius: 50%;
+  padding: 0px;
+  width: 37px;
+  height: 37px;
+  color: #374151;
+  text-align: center;
+}
+.previous {
+  margin-right: 3px;
+}
+li .next {
+  margin-left: 6px;
+  padding: 10px;
+}
+
+.previous > a {
+  padding: 0;
+  width: 19px;
+}
