--- a/next-toolkit/pages/style.css
+++ b/next-toolkit/pages/style.css
@@ -117,3 +117,18 @@ li .next {
   max-width: 200px;
   margin: 20px 40px;
 }
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+}
